<resources>
    <string name="app_name">Mars App</string>
    <string name="temperature">Temperature (°C)</string>
    <string name="wind_speed">Wind Speed (m/s)</string>
    <string name="pressure">Pressure (Pa)</string>
    <string name="max">Max.</string>
    <string name="avg">Avg.</string>
    <string name="min">Min.</string>
    <string name="weather">WEATHER</string>
    <string name="photo_from_rover">PHOTO</string>
    <string name="photo_count">%1$d of %2$d</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="saving_error">Please wait until media is downloaded</string>
</resources>
